# CMProject

./: .gitignore  CMakeLists.txt  README.md  ising_L16_data.npz  ising_finite_size_data.npz  ising_finite_size_tau.npz  ising_finite_size_tau1.npz  ising_sim.ipynb  requirements.txt  test.ipynb
include/: flip_algorithm.hpp  isingspins.hpp  lattice.hpp
module/: ising_bindings.cpp  setup.py
module/ising_model.egg-info/: PKG-INFO  SOURCES.txt
src/: flip_algorithm.cpp  isingspins.cpp  lattice.cpp
